# shorten-me

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.functions  Dockerfile.test  README.md  deploy.py  deploy_backend.py  deploy_frontend.py  requirements.txt  test_deploy.py
.github/: azure-deploy.yaml
.github/workflows/: azure-deploy.yaml  deploy-all.yaml  (+9 more)
app/: auth.py  container.py  main.py
backend-api/: Dockerfile  README.md  auth.py  container.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  responses.py
backend-api/azure_functions/: local.settings.json  requirements.txt
backend-api/azure_functions/create_url/: __init__.py  function.json
backend-api/azure_functions/create_user/: __init__.py
backend-api/azure_functions/health/: __init__.py  function.json
backend-api/azure_functions/slug/: __init__.py  function.json
backend-api/azure_functions/warmup/: __init__.py  function.json
backend-api/exceptions/: __init__.py  urls.py
backend-api/middleware/: exception_handler.py
backend-api/routers/: auth.py  health.py  url.py  urls.py  user.py
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend-next/: package-lock.json
infra/: .gitignore  Pulumi.dev-kuba.yaml  Pulumi.dev-oskar.yaml  Pulumi.development.yaml  Pulumi.oskar-dev.yaml  Pulumi.oskar.yaml  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  auto_deploy.py  deploy_frontend.py  requirements.txt
(+91 files in other folders)
